added convenience class Session, use for quick connection and commands.

--- a/Logic/CMakeLists.txt
+++ b/Logic/CMakeLists.txt
@@ -22,6 +22,8 @@ set(${KIT}_INCLUDE_DIRECTORIES
   )
 
 set(${KIT}_SRCS
+  IGTLIOUtilities.h
+  IGTLIOUtilities.cxx
   vtkIGTLIOObject.h
   vtkIGTLIOObject.cxx
   vtkIGTLIODeviceFactory.cxx
@@ -30,6 +32,8 @@ set(${KIT}_SRCS
   vtkIGTLIOCircularBuffer.h
   vtkIGTLIOConnector.cxx
   vtkIGTLIOConnector.h
+  vtkIGTLIOSession.cxx
+  vtkIGTLIOSession.h
   vtkIGTLIOLogic.cxx
   vtkIGTLIOLogic.h
   )
