COMP: Allow building without Qt

--- a/OpenIGTLinkIOConfig.cmake.in
+++ b/OpenIGTLinkIOConfig.cmake.in
@@ -6,7 +6,9 @@ set (OpenIGTLinkIO_INCLUDE_DIRS "@OpenIGTLinkIO_INCLUDE_DIRS@")
 set (OpenIGTLinkIO_LIBRARY_DIRS "@OpenIGTLinkIO_LIBRARY_DIRS@")
 set (OpenIGTLinkIO_LIBRARIES "@OpenIGTLinkIO_LIBRARIES@")
 
-set( IGTLIO_QT_VERSION "@IGTLIO_QT_VERSION@" )
-if( IGTLIO_QT_VERSION VERSION_EQUAL "5" )
+if (${IGTLIO_USE_GUI})
+  set( IGTLIO_QT_VERSION "@IGTLIO_QT_VERSION@" )
+  if( IGTLIO_QT_VERSION VERSION_EQUAL "5" )
     find_package( Qt5 COMPONENTS Widgets Concurrent Xml OpenGL Sql REQUIRED )
+  endif()
 endif()
