Added missing requirement for vtkGUISupportQt in qIgtlClient example.

--- a/Examples/qIgtlClient/CMakeLists.txt
+++ b/Examples/qIgtlClient/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(VTK
   COMPONENTS
   vtkIOImage
   vtkImagingMath
+  vtkGUISupportQt
   REQUIRED
   NO_MODULE)
 include(${VTK_USE_FILE})
