--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -53,5 +53,5 @@ add_io_test("testClientServer" testClientServer testClientServer.cxx)
 add_io_test("testReceiveImage" testReceiveImage testReceiveImage.cxx)
 add_io_test("testSendReceiveCommand" testSendReceiveCommand testSendReceiveCommand.cxx)
 add_io_test("testDeduceToolBasedOnName" testDeduceToolBasedOnName testDeduceToolBasedOnName.cxx)
-#add_io_test("testGetUSProbeParams" testGetUSProbeParams testGetUSProbeParams.cxx)
 add_io_test("testCommandMessageCodec" testCommandMessageCodec testCommandMessageCodec.cxx)
+add_io_test("testSendReceiveCommandWidthCodec" testSendReceiveCommandWidthCodec testSendReceiveCommandWidthCodec.cxx)
