--- a/OpenIGTLinkIOConfig.cmake.in
+++ b/OpenIGTLinkIOConfig.cmake.in
@@ -1,14 +1,21 @@
-include("${CMAKE_BINARY_DIR}/OpenIGTLinkIOTargets.cmake")
+SET(OpenIGTLink_DIR "@OpenIGTLink_DIR@")
+FIND_PACKAGE(OpenIGTLink REQUIRED NO_MODULE)
 
-set (OpenIGTLinkIO_FOUND 1)
+INCLUDE("${CMAKE_BINARY_DIR}/OpenIGTLinkIOTargets.cmake")
 
-set (OpenIGTLinkIO_INCLUDE_DIRS "@OpenIGTLinkIO_INCLUDE_DIRS@")
-set (OpenIGTLinkIO_LIBRARY_DIRS "@OpenIGTLinkIO_LIBRARY_DIRS@")
-set (OpenIGTLinkIO_LIBRARIES "@OpenIGTLinkIO_LIBRARIES@")
+SET(OpenIGTLinkIO_FOUND 1)
 
-if (${IGTLIO_USE_GUI})
-  set( IGTLIO_QT_VERSION "@IGTLIO_QT_VERSION@" )
-  if( IGTLIO_QT_VERSION VERSION_EQUAL "5" )
-    find_package( Qt5 COMPONENTS Widgets Concurrent Xml OpenGL Sql REQUIRED )
-  endif()
-endif()
+SET(OpenIGTLinkIO_INCLUDE_DIRS "@OpenIGTLinkIO_INCLUDE_DIRS@")
+SET(OpenIGTLinkIO_LIBRARY_DIRS "@OpenIGTLinkIO_LIBRARY_DIRS@")
+SET(OpenIGTLinkIO_LIBRARIES "@OpenIGTLinkIO_LIBRARIES@")
+
+IF(@IGTLIO_USE_GUI@)
+  SET(IGTLIO_QT_VERSION "@IGTLIO_QT_VERSION@")
+  IF(IGTLIO_QT_VERSION EQUAL "5")
+    SET(Qt5_DIR @Qt5_DIR@)
+    FIND_PACKAGE(Qt5 COMPONENTS Widgets Concurrent Xml OpenGL Sql REQUIRED)
+  ELSEIF(IGTLIO_QT_VERSION EQUAL "4")
+    SET(QT_QMAKE_EXECUTABLE @QT_QMAKE_EXECUTABLE@)
+    FIND_PACKAGE(Qt4 COMPONENTS Widgets Concurrent Xml OpenGL Sql REQUIRED)
+  ENDIF()
+ENDIF()
