BUG: Not accessing Qt variables when GUI is not specified.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,7 +70,7 @@ export(TARGETS ${OpenIGTLinkIO_TARGETS}
 set (OpenIGTLinkIO_LIBRARIES ${OpenIGTLinkIO_TARGETS})
 set (OpenIGTLinkIO_LIBRARY_DIRS ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 
-if(IGTLIO_QT_VERSION EQUAL "5" AND NOT Qt5_DIR)
+if(IGTLIO_USE_GUI AND IGTLIO_QT_VERSION EQUAL "5" AND NOT Qt5_DIR)
   # Sometimes Qt5_DIR is not populated
   get_filename_component(Qt5_DIR ${Qt5Core_DIR} DIRECTORY)
   set(Qt5_DIR ${Qt5_DIR}/Qt5)
