--- a/GUI/CMakeLists.txt
+++ b/GUI/CMakeLists.txt
@@ -84,9 +84,11 @@ set(${KIT}_UI_SRCS
 
 set(${KIT}_INCLUDE_DIRECTORIES
   PUBLIC
-  ${CMAKE_CURRENT_SOURCE_DIR}
-  ${CMAKE_CURRENT_SOURCE_DIR}/DeviceWidgets
-  ${CMAKE_CURRENT_BINARY_DIR}
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/DeviceWidgets>
+  $<INSTALL_INTERFACE:${OpenIGTLinkIO_INCLUDE_INSTALL}>
+  $<INSTALL_INTERFACE:${OpenIGTLinkIO_INCLUDE_INSTALL}/DeviceWidgets>
   )
 
 if(IGTLIO_QT_VERSION VERSION_GREATER "4")
@@ -113,4 +115,12 @@ target_include_directories(${KIT} ${${KIT}_INCLUDE_DIRECTORIES})
 include( GenerateExportHeader )
 generate_export_header( ${KIT} EXPORT_FILE_NAME ${KIT}Export.h EXPORT_MACRO_NAME ${${KIT}_EXPORT_DIRECTIVE} )
 
+INSTALL(TARGETS ${KIT} EXPORT OpenIGTLinkIO 
+  RUNTIME DESTINATION "${OpenIGTLinkIO_BINARY_INSTALL}"
+  LIBRARY ARCHIVE DESTINATION "${OpenIGTLinkIO_LIBRARY_INSTALL}"
+  )
 
+INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION "${OpenIGTLinkIO_INCLUDE_INSTALL}" PATTERN *.h)
+INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/DeviceWidgets DESTINATION "${OpenIGTLinkIO_INCLUDE_INSTALL}" PATTERN *.h)
+
+INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/${KIT}Export.h" DESTINATION "${OpenIGTLinkIO_INCLUDE_INSTALL}")
