--- a/OpenIGTLinkIOConfig.cmake.in
+++ b/OpenIGTLinkIOConfig.cmake.in
@@ -1,29 +1,18 @@
 IF(NOT OpenIGTLink_FOUND)
   SET(OpenIGTLink_DIR "@OpenIGTLink_DIR@")
   FIND_PACKAGE(OpenIGTLink REQUIRED NO_MODULE)
+ELSE()
+  IF(NOT "@OpenIGTLink_VERSION_MAJOR@.@OpenIGTLink_VERSION_MINOR@.@OpenIGTLink_VERSION_PATCH@" VERSION_EQUAL "${OpenIGTLink_VERSION_MAJOR}.${OpenIGTLink_VERSION_MINOR}.${OpenIGTLink_VERSION_PATCH}")
+	MESSAGE(SEND_ERROR "Trying to use different versions in OpenIGTLinkIO and your superceeding project, use the same version of OpenIGTLink.")
+  ENDIF()
 ENDIF()
 IF(EXISTS ${OpenIGTLink_USE_FILE})
   INCLUDE(${OpenIGTLink_USE_FILE})
 ENDIF()
 
-IF(@IS_INSTALL@)
-  get_filename_component(OpenIGTLinkIO_CMAKE_PACKAGE_DIR "${CMAKE_CURRENT_LIST_FILE}" DIRECTORY)
-  get_filename_component(OpenIGTLinkIO_BASE_DIR "${OpenIGTLinkIO_CMAKE_PACKAGE_DIR}" DIRECTORY)
-  get_filename_component(OpenIGTLinkIO_LIBRARY_DIR "${OpenIGTLinkIO_BASE_DIR}" DIRECTORY)
-  get_filename_component(OpenIGTLinkIO_BASE_DIR "${OpenIGTLinkIO_LIBRARY_DIR}" DIRECTORY)
-
-  set(OpenIGTLinkIO_BINARY_DIR "${OpenIGTLinkIO_BASE_DIR}/@OpenIGTLinkIO_BINARY_INSTALL@" DIRECTORY)
+@OpenIGTLinkIO_CONFIG_CODE@
   
-  INCLUDE("${OpenIGTLinkIO_CMAKE_PACKAGE_DIR}/OpenIGTLinkIOTargets.cmake")
-
-  SET(OpenIGTLinkIO_INCLUDE_DIRS "${OpenIGTLinkIO_BASE_DIR}/@OpenIGTLinkIO_INCLUDE_INSTALL@")
-  SET(OpenIGTLinkIO_LIBRARY_DIRS ${OpenIGTLinkIO_BINARY_DIR} ${OpenIGTLinkIO_LIBRARY_DIR})
-ELSE()
-  INCLUDE("@CMAKE_BINARY_DIR@/OpenIGTLinkIOTargets.cmake")
-
-  SET(OpenIGTLinkIO_LIBRARY_DIRS "@OpenIGTLinkIO_LIBRARY_DIRS@")
-  SET(OpenIGTLinkIO_INCLUDE_DIRS "@OpenIGTLinkIO_INCLUDE_DIRS@")
-ENDIF()
+INCLUDE("@OpenIGTLinkIO_LIBRARY_TARGETS_FILE@")
 
 # Enable support for old style include/linking
 # It is highly recommended to link to target names, thus 
@@ -31,15 +20,4 @@ ENDIF()
 SET(OpenIGTLinkIO_FOUND 1)
 SET(OpenIGTLinkIO_LIBRARIES "@OpenIGTLinkIO_LIBRARIES@")
 
-IF(@IGTLIO_USE_GUI@)
-  SET(IGTLIO_QT_VERSION "@IGTLIO_QT_VERSION@")
-  IF(IGTLIO_QT_VERSION EQUAL "5")
-	IF(NOT DEFINED Qt5_DIR)
-	  SET(Qt5_DIR "@Qt5_DIR@")
-	ENDIF()
-    FIND_PACKAGE(Qt5 COMPONENTS Widgets Concurrent Xml OpenGL Sql REQUIRED)
-  ELSEIF(IGTLIO_QT_VERSION EQUAL "4")
-    SET(QT_QMAKE_EXECUTABLE "@QT_QMAKE_EXECUTABLE@")
-    FIND_PACKAGE(Qt4 COMPONENTS Widgets Concurrent Xml OpenGL Sql REQUIRED)
-  ENDIF()
-ENDIF()
+@OpenIGTLinkIO_Qt_CONFIG_CODE@
